<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analyze Result</string>
    <string name="news_for_you">News for you</string>
    <string name="kembali">Back</string>
    <string name="simpan">Save</string>
    <string name="failed_image_classifier">Failed initialize image classifier</string>
    <string name="prediction_history">Prediction history</string>
    <string name="crop">Edit Image</string>
</resources>