<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/app_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="?attr/colorOnBackground"
            android:fontFamily="@font/opensans_extrabold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/galleryButton"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_place_holder" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_semibold"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/analyzeButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/analyze"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_semibold"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>