<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_result_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_result_text"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_place_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_result_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:strokeWidth="3dp"
        app:strokeColor="@color/primary"
        app:cardBackgroundColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_result_image"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/primary"
            android:gravity="center">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:importantForAccessibility="no"
                android:src="@drawable/bacteria_stroke_rounded"
                android:background="@color/primary"
                app:tint="@color/white"
                android:layout_marginEnd="14dp" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:fontFamily="@font/opensans_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_result_image"
                android:text="@string/result" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintWidth_percent="0.35"
        android:text="@string/kembali"
        android:textColor="@color/black"
        android:fontFamily="@font/opensans_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/grey"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintWidth_percent="0.55"
        android:text="@string/simpan"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>